[gd_scene load_steps=10 format=3 uid="uid://uha2tx32l7pf"]

[ext_resource type="Texture2D" uid="uid://fc2g7xmf2tpq" path="res://Assets/Textures/NoLogo.png" id="1_1bavc"]
[ext_resource type="Theme" uid="uid://cnjtetudthuan" path="res://Assets/Themes/windows_95_theme/save1.tres" id="1_senmi"]
[ext_resource type="Texture2D" uid="uid://bglwmc1p0g780" path="res://Assets/Themes/windows_95_theme/Windows_95_panel13.png" id="2_aopu5"]
[ext_resource type="Script" uid="uid://4eepr0sygsuq" path="res://UI/logo_drawer.gd" id="2_id3gb"]
[ext_resource type="Texture2D" uid="uid://dxx6bs8aqtahq" path="res://Assets/Themes/windows_95_theme/Windows_95_panel12.png" id="3_senmi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_87302"]
bg_color = Color(0.533037, 0.533037, 0.533037, 1)
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.94, 0.94, 0.94, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
shadow_color = Color(0.9, 0.9, 0.9, 0.945098)
shadow_size = 1
shadow_offset = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_senmi"]
interpolation_mode = 1
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_id3gb"]
gradient = SubResource("Gradient_senmi")
width = 1
height = 1
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nxl1f"]
content_margin_top = 2.0
content_margin_bottom = 1.0
bg_color = Color(0.205117, 0.205117, 0.205117, 1)
border_width_left = 1
border_width_top = 1
border_color = Color(0.564962, 0.564962, 0.564961, 1)
shadow_color = Color(1, 1, 1, 1)
shadow_size = 1
shadow_offset = Vector2(1, 1)

[node name="LogoDrawer" type="PanelContainer"]
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_senmi")
script = ExtResource("2_id3gb")

[node name="MainMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 0

[node name="ContentMargin" type="MarginContainer" parent="MainMargin"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMargin/ContentMargin"]
layout_mode = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MainMargin/ContentMargin/VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
stretch_mode = 0

[node name="Panel" type="Panel" parent="MainMargin/ContentMargin/VBoxContainer/AspectRatioContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_87302")

[node name="SubViewportContainer" type="SubViewportContainer" parent="MainMargin/ContentMargin/VBoxContainer/AspectRatioContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="LogoViewport" type="SubViewport" parent="MainMargin/ContentMargin/VBoxContainer/AspectRatioContainer/SubViewportContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
canvas_cull_mask = 4294966784
size = Vector2i(128, 128)
size_2d_override = Vector2i(32, 32)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Control" type="MarginContainer" parent="MainMargin/ContentMargin/VBoxContainer/AspectRatioContainer/SubViewportContainer/LogoViewport"]
visibility_layer = 512
texture_filter = 1
texture_repeat = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MainMargin/ContentMargin/VBoxContainer/AspectRatioContainer/SubViewportContainer/LogoViewport/Control"]
visibility_layer = 512
layout_mode = 2
texture = ExtResource("1_1bavc")
stretch_mode = 1

[node name="Brush" type="Sprite2D" parent="MainMargin/ContentMargin/VBoxContainer/AspectRatioContainer/SubViewportContainer/LogoViewport/Control"]
unique_name_in_owner = true
visibility_layer = 512
position = Vector2(60.25, 55.5)
texture = SubResource("GradientTexture2D_id3gb")

[node name="HBoxContainer2" type="HBoxContainer" parent="MainMargin/ContentMargin/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 38

[node name="HSlider" type="HSlider" parent="MainMargin/ContentMargin/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("2_aopu5")
theme_override_icons/grabber_highlight = ExtResource("3_senmi")
theme_override_styles/slider = SubResource("StyleBoxFlat_nxl1f")
min_value = 1.0
value = 1.0

[node name="ColorPickerButton" type="ColorPickerButton" parent="MainMargin/ContentMargin/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainMargin/ContentMargin/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MainMargin/ContentMargin/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accept"

[node name="Button2" type="Button" parent="MainMargin/ContentMargin/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Control" type="Control" parent="MainMargin"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="LogoDrawExitButton" type="Button" parent="MainMargin/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -23.0
offset_bottom = 28.0
grow_horizontal = 0
text = "X"
